Edições da aula 10

--- a/resources/index.html
+++ b/resources/index.html
@@ -13,11 +13,21 @@
     </head>
     <body>
         <header>
+            <nav>
+                <img class="logo" src="img/burger-solid.svg" alt="">
+
+                <ul class="main-nav">
+                    <li><a href="#">Tele entrega</a></li>
+                    <li><a href="#">Funcionamento</a></li>
+                    <li><a href="#">Cardápio</a></li>
+                    <li><a href="#">Cardápio</a></li>
+                </ul>
+            </nav>
             <div class="hero-text-box">
                 <h1>Space Burger! <br>
                      Burgers de outro Planeta</h1>
                      <a class="btn btn-full" href="#">Comprar agora</a>
-                     <a class="btn btn-ghost" href="#">Mais informações</a>
+                     <a class="btn btn-ghost" href="#">Sobre nós</a>
             </div>
         </header>
     </body>
