--- a/resources/index.html
+++ b/resources/index.html
@@ -1,34 +1,80 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <!-- Importação do normalize css para arrumar bugs -->
-        <link rel="stylesheet" type="text/css" href="../vendors/css/normalize.css">
-        <!-- Importação do nossa folha de estilo -->
-        <link rel="stylesheet" type="text/css" href="../resources/css/style.css">
-        <!-- Importação da fonte Lato -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400&display=swap" rel="stylesheet">        <title>Projeto 1</title>
-    
-    </head>
-    <body>
-        <header>
-            <nav>
-                <img class="logo" src="img/burger-solid.svg" alt="">
 
-                <ul class="main-nav">
-                    <li><a href="#">Tele entrega</a></li>
-                    <li><a href="#">Funcionamento</a></li>
-                    <li><a href="#">Cardápio</a></li>
-                    <li><a href="#">Cardápio</a></li>
-                </ul>
-            </nav>
-            <div class="hero-text-box">
-                <h1>Space Burger! <br>
-                     Burgers de outro Planeta</h1>
-                     <a class="btn btn-full" href="#">Comprar agora</a>
-                     <a class="btn btn-ghost" href="#">Sobre nós</a>
+<head>
+    <!-- Importação do normalize css para arrumar bugs -->
+    <link rel="stylesheet" type="text/css" href="../vendors/css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="../vendors/css/grid.css">
+    <!-- Importação do nossa folha de estilo -->
+    <link rel="stylesheet" type="text/css" href="../resources/css/style.css">
+    <!-- Importação da fonte Lato -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400&display=swap" rel="stylesheet">
+    <title>Projeto 1</title>
+
+</head>
+
+<body>
+    <header>
+        <nav>
+            <img class="logo" src="img/burger-solid.svg" alt="">
+
+            <ul class="main-nav">
+                <li><a href="#">Tele entrega</a></li>
+                <li><a href="#">Funcionamento</a></li>
+                <li><a href="#">Cardápio</a></li>
+                <li><a href="#">Cardápio</a></li>
+            </ul>
+        </nav>
+        <div class="hero-text-box">
+            <h1>Space Burger! <br>
+                Burgers de outro Planeta</h1>
+            <a class="btn btn-full" href="#">Comprar agora</a>
+            <a class="btn btn-ghost" href="#">Sobre nós</a>
+        </div>
+    </header>
+    <section class="section-features">
+        <div class="row-pitch">
+            <h2>Sabores galaticos &ndash; venha experimentar</h2>
+            <p class="long-copy">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus necessitatibus
+                pariatur quod fugiat a molestiae odit eius quo distinctio perspiciatis modi cupiditate, non dicta,
+                veritatis sed magni? Voluptatem, quas possimus!
+                Necessitatibus qui id sit ab exercitationem, distinctio ipsum architecto cumque consequatur, repudiandae
+                consequuntur ducimus dolores? Et adipisci porro quisquam quae. Atque tempora fugiat quis nihil voluptas
+                sed, dicta quod possimus.
+                Itaque, iste dicta veniam praesentium iusto illo et excepturi commodi eius amet vel quas nemo porro
+                explicabo, minus magni dolorem debitis! Vitae blanditiis, alias vero dolores illo eligendi enim? Quae.
+            </p>
+        </div>
+        <br><br>
+        <div class="row features">
+            <div class="col span-1-of-4">
+                <ion-icon name="time-outline"></ion-icon>
+                <h3>Abduções até a 00:00</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur illo corrupti error itaque asperiores fugiat voluptatum, et totam quasi in placeat molestias non quas alias qui, iste beatae doloribus cupiditate?</p>
             </div>
-        </header>
-    </body>
- </html>
+            <div class="col span-1-of-4">
+                <ion-icon name="timer-outline"></ion-icon>
+                <h3>Preparo na velocidade da luz</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus sit ut vitae! Labore assumenda nesciunt, at ipsam sequi est. Porro saepe voluptatum explicabo similique reprehenderit corrupti? Blanditiis enim mollitia quibusdam.</p>
+            </div>
+            <div class="col span-1-of-4">
+
+                <h3>Melhores ingredientes da Galaxia </h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis sapiente obcaecati cumque delectus eum! Atque, reiciendis incidunt recusandae id, iusto esse voluptate beatae tenetur numquam harum est voluptatibus! Repellat, quas.</p>
+            </div>
+            <div class="col span-1-of-4">
+                <h3>Tele-entrega</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa facere praesentium aliquam saepe nisi qui pariatur numquam voluptas itaque, omnis rem ab aperiam delectus nulla sit! Obcaecati laudantium quaerat dolor.</p>
+            </div>
+        </div>
+    </section>
+
+
+
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+</body>
+
+</html>
