--- a/resources/index.html
+++ b/resources/index.html
@@ -18,12 +18,12 @@
 <body>
     <header>
         <nav>
-            <img class="logo" src="img/burger-solid.svg" alt="">
+            <img class="logo" src="img/android-chrome-512x512.png" alt="">
 
             <ul class="main-nav">
                 <li><a href="#">Tele entrega</a></li>
                 <li><a href="#">Funcionamento</a></li>
-                <li><a href="#">Cardápio</a></li>
+                <li><a href="#cardapio">Cardápio</a></li>
                 <li><a href="#">Cardápio</a></li>
             </ul>
         </nav>
@@ -52,23 +52,73 @@
             <div class="col span-1-of-4">
                 <ion-icon name="time-outline"></ion-icon>
                 <h3>Abduções até a 00:00</h3>
+                <br>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur illo corrupti error itaque asperiores fugiat voluptatum, et totam quasi in placeat molestias non quas alias qui, iste beatae doloribus cupiditate?</p>
             </div>
             <div class="col span-1-of-4">
                 <ion-icon name="timer-outline"></ion-icon>
                 <h3>Preparo na velocidade da luz</h3>
+                <br>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus sit ut vitae! Labore assumenda nesciunt, at ipsam sequi est. Porro saepe voluptatum explicabo similique reprehenderit corrupti? Blanditiis enim mollitia quibusdam.</p>
             </div>
             <div class="col span-1-of-4">
-
+                <ion-icon name="nutrition-outline"></ion-icon>
                 <h3>Melhores ingredientes da Galaxia </h3>
+                <br>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis sapiente obcaecati cumque delectus eum! Atque, reiciendis incidunt recusandae id, iusto esse voluptate beatae tenetur numquam harum est voluptatibus! Repellat, quas.</p>
             </div>
             <div class="col span-1-of-4">
-                <h3>Tele-entrega</h3>
+                <ion-icon name="star-half-outline"></ion-icon>
+                <h3>Nos Avalie</h3>
+                <br>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa facere praesentium aliquam saepe nisi qui pariatur numquam voluptas itaque, omnis rem ab aperiam delectus nulla sit! Obcaecati laudantium quaerat dolor.</p>
             </div>
         </div>
+    </section>
+
+    <section class="sections-fotos" id="cardapio">
+        <ul class="image-showcase">
+            <li>
+                <figure class="foto">
+                    <img src="img/1.jpg" alt="Foto 01" width="720" height="640">
+                </figure>
+            </li>
+            <li>
+                <figure class="foto">
+                    <img src="img/2.jpg" alt="Foto 02" width="720" height="640">
+                </figure>
+            </li>
+            <li>
+                <figure class="foto">
+                    <img src="img/3.jpg" alt="Foto 03" width="720" height="640">
+                </figure>
+            </li>
+            <li>
+                <figure class="foto">
+                    <img src="img/4.jpg" alt="Foto 04" width="720" height="640">
+                </figure>
+            </li>
+            <li>
+                <figure class="foto">
+                    <img src="img/5.jpg" alt="Foto 05" width="720" height="640">
+                </figure>
+            </li>
+            <li>
+                <figure class="foto">
+                    <img src="img/6.jpg" alt="Foto 06" width="720" height="640">
+                </figure>
+            </li>
+            <li>
+                <figure class="foto">
+                    <img src="img/7.jpg" alt="Foto 07" width="720" height="640">
+                </figure>
+            </li>
+            <li>
+                <figure class="foto">
+                    <img src="img/8.jpg" alt="Foto 08" width="720" height="640">
+                </figure>
+            </li>
+        </ul>
     </section>
 
 
