--- a/resources/index.html
+++ b/resources/index.html
@@ -2,16 +2,15 @@
 <html lang="pt-br">
 
 <head>
-    <!-- Importação do normalize css para arrumar bugs -->
     <link rel="stylesheet" type="text/css" href="../vendors/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="../vendors/css/grid.css">
-    <!-- Importação do nossa folha de estilo -->
     <link rel="stylesheet" type="text/css" href="../resources/css/style.css">
-    <!-- Importação da fonte Lato -->
+    <link rel="stylesheet" type="text/css" href="../resources/css/queries.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400&display=swap" rel="stylesheet">
-    <title>Projeto 1</title>
+    <meta name="viewport" content="with=device-width, initial-scale=1.0">
+    <title>Space Burger</title>
 
 </head>
 
@@ -21,20 +20,20 @@
             <img class="logo" src="img/android-chrome-512x512.png" alt="">
 
             <ul class="main-nav">
-                <li><a href="#">Tele entrega</a></li>
-                <li><a href="#">Funcionamento</a></li>
+                <li><a href="#sobre">Sobre nós</a></li>
+                <li><a href="#funcionamento">Funcionamento</a></li>
                 <li><a href="#cardapio">Cardápio</a></li>
-                <li><a href="#">Cardápio</a></li>
+
             </ul>
         </nav>
         <div class="hero-text-box">
             <h1>Space Burger! <br>
                 Burgers de outro Planeta</h1>
             <a class="btn btn-full" href="#">Comprar agora</a>
-            <a class="btn btn-ghost" href="#">Sobre nós</a>
+            <a class="btn btn-ghost" href="#">Ligar</a>
         </div>
     </header>
-    <section class="section-features">
+    <section class="section-features" id="sobre">
         <div class="row-pitch">
             <h2>Sabores galaticos &ndash; venha experimentar</h2>
             <p class="long-copy">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus necessitatibus
@@ -48,7 +47,7 @@
             </p>
         </div>
         <br><br>
-        <div class="row features">
+        <div class="row-features" id="funcionamento">
             <div class="col span-1-of-4">
                 <ion-icon name="time-outline"></ion-icon>
                 <h3>Abduções até a 00:00</h3>
@@ -71,11 +70,11 @@
                 <ion-icon name="star-half-outline"></ion-icon>
                 <h3>Nos Avalie</h3>
                 <br>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa facere praesentium aliquam saepe nisi qui pariatur numquam voluptas itaque, omnis rem ab aperiam delectus nulla sit! Obcaecati laudantium quaerat dolor.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa facere praesentium aliquam saepe nisi qui pariatur numquam voluptas itaque, omnis rem ab aperiam delectus nulla sit!  Labore assumenda nesciunt, at ipsam sequi est. Porro saepe voluptatum explicabo similique reprehenderit corrupti? Obcaecati laudantium quaerat dolor.</p>
             </div>
         </div>
     </section>
-
+ 
     <section class="sections-fotos" id="cardapio">
         <ul class="image-showcase">
             <li>
