--- a/resources/index.html
+++ b/resources/index.html
@@ -4,126 +4,78 @@
 <head>
     <link rel="stylesheet" type="text/css" href="../vendors/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="../vendors/css/grid.css">
-    <link rel="stylesheet" type="text/css" href="../resources/css/style.css">
+    <link rel="stylesheet" type="text/css" href="../resources/css/cadastro.css">
     <link rel="stylesheet" type="text/css" href="../resources/css/queries.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="shortcut icon" href="img/android-chrome-512x512.png" type="image/x-icon">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500&family=Lato:wght@100;300;400&family=Poppins:wght@100;200;300;400;500;600&display=swap"
+        rel="stylesheet">
     <meta name="viewport" content="with=device-width, initial-scale=1.0">
     <title>Space Burger</title>
-
 </head>
-
 <body>
     <header>
         <nav>
-            <img class="logo" src="img/android-chrome-512x512.png" alt="">
+            <img class="logo menu-burger" src="img/android-chrome-512x512.png" alt="">
+            <h2>Entre na sua conta e acesse nosso site</h2>
+          </nav>
+        
 
-            <ul class="main-nav">
-                <li><a href="#sobre">Sobre nós</a></li>
-                <li><a href="#funcionamento">Funcionamento</a></li>
-                <li><a href="#cardapio">Cardápio</a></li>
-
-            </ul>
-        </nav>
-        <div class="hero-text-box">
-            <h1>Space Burger! <br>
-                Burgers de outro Planeta</h1>
-            <a class="btn btn-full" href="#">Comprar agora</a>
-            <a class="btn btn-ghost" href="#">Ligar</a>
-        </div>
     </header>
-    <section class="section-features" id="sobre">
-        <div class="row-pitch">
-            <h2>Sabores galaticos &ndash; venha experimentar</h2>
-            <p class="long-copy">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus necessitatibus
-                pariatur quod fugiat a molestiae odit eius quo distinctio perspiciatis modi cupiditate, non dicta,
-                veritatis sed magni? Voluptatem, quas possimus!
-                Necessitatibus qui id sit ab exercitationem, distinctio ipsum architecto cumque consequatur, repudiandae
-                consequuntur ducimus dolores? Et adipisci porro quisquam quae. Atque tempora fugiat quis nihil voluptas
-                sed, dicta quod possimus.
-                Itaque, iste dicta veniam praesentium iusto illo et excepturi commodi eius amet vel quas nemo porro
-                explicabo, minus magni dolorem debitis! Vitae blanditiis, alias vero dolores illo eligendi enim? Quae.
-            </p>
+
+    <main>
+        <form>
+
+            <label for="nome">Nome</label>
+            <input type="text" id="nome" required placeholder="Digite seu nome de usuário">
+            <label for="email">Email</label>
+            <input type="email" id="email" required placeholder="Digite seu email cadastrado">
+            <label for="cpf">Senha</label>
+            <input type="number" id="senha" required placeholder="Digite sua senha">
+            <br><br><br>
+            <a class="btn btn-full" href="principal.html">Entrar</a>
+
+        </form>
+    </main>
+    <footer>
+        <div class="footer-container">
+          <div class="footer-left">
+            <h3>Informações de Contato</h3>
+            <p>Endereço: Av. João Barreto de Menezes, 718</p>
+            <p>Telefone: (123) 666-6969</p>
+            <p>Email: spaceburger@gmail.com</p>
+          </div>
+          <div class="footer-middle">
+            <h3>Horário de Funcionamento</h3>
+            <p>Terça a Sexta: 19h - 00h</p>
+            <p>Sábado e Domingo: 19h - 02h</p>
+            <p>Feriados: Não abrimos!</p>
+          </div>
+          <div class="footer-right">
+            <h3>Siga-nos nas redes sociais</h3>
+            <div class="social-icons">
+                <ion-icon name="logo-facebook"></ion-icon>
+                <ion-icon name="logo-instagram"></ion-icon>
+                <ion-icon name="logo-twitter"></ion-icon>
+            </div>
+          </div>
         </div>
-        <br><br>
-        <div class="row-features" id="funcionamento">
-            <div class="col span-1-of-4">
-                <ion-icon name="time-outline"></ion-icon>
-                <h3>Abduções até a 00:00</h3>
-                <br>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur illo corrupti error itaque asperiores fugiat voluptatum, et totam quasi in placeat molestias non quas alias qui, iste beatae doloribus cupiditate?</p>
-            </div>
-            <div class="col span-1-of-4">
-                <ion-icon name="timer-outline"></ion-icon>
-                <h3>Preparo na velocidade da luz</h3>
-                <br>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus sit ut vitae! Labore assumenda nesciunt, at ipsam sequi est. Porro saepe voluptatum explicabo similique reprehenderit corrupti? Blanditiis enim mollitia quibusdam.</p>
-            </div>
-            <div class="col span-1-of-4">
-                <ion-icon name="nutrition-outline"></ion-icon>
-                <h3>Melhores ingredientes da Galaxia </h3>
-                <br>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis sapiente obcaecati cumque delectus eum! Atque, reiciendis incidunt recusandae id, iusto esse voluptate beatae tenetur numquam harum est voluptatibus! Repellat, quas.</p>
-            </div>
-            <div class="col span-1-of-4">
-                <ion-icon name="star-half-outline"></ion-icon>
-                <h3>Nos Avalie</h3>
-                <br>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa facere praesentium aliquam saepe nisi qui pariatur numquam voluptas itaque, omnis rem ab aperiam delectus nulla sit!  Labore assumenda nesciunt, at ipsam sequi est. Porro saepe voluptatum explicabo similique reprehenderit corrupti? Obcaecati laudantium quaerat dolor.</p>
-            </div>
+        <div class="footer-bottom">
+          <p>&copy; 2023 Space Burger. Todos os direitos reservados.</p>
         </div>
-    </section>
- 
-    <section class="sections-fotos" id="cardapio">
-        <ul class="image-showcase">
-            <li>
-                <figure class="foto">
-                    <img src="img/1.jpg" alt="Foto 01" width="720" height="640">
-                </figure>
-            </li>
-            <li>
-                <figure class="foto">
-                    <img src="img/2.jpg" alt="Foto 02" width="720" height="640">
-                </figure>
-            </li>
-            <li>
-                <figure class="foto">
-                    <img src="img/3.jpg" alt="Foto 03" width="720" height="640">
-                </figure>
-            </li>
-            <li>
-                <figure class="foto">
-                    <img src="img/4.jpg" alt="Foto 04" width="720" height="640">
-                </figure>
-            </li>
-            <li>
-                <figure class="foto">
-                    <img src="img/5.jpg" alt="Foto 05" width="720" height="640">
-                </figure>
-            </li>
-            <li>
-                <figure class="foto">
-                    <img src="img/6.jpg" alt="Foto 06" width="720" height="640">
-                </figure>
-            </li>
-            <li>
-                <figure class="foto">
-                    <img src="img/7.jpg" alt="Foto 07" width="720" height="640">
-                </figure>
-            </li>
-            <li>
-                <figure class="foto">
-                    <img src="img/8.jpg" alt="Foto 08" width="720" height="640">
-                </figure>
-            </li>
-        </ul>
-    </section>
+      </footer>
 
 
 
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+      <script>document.querySelector('.logo').addEventListener('click', function () {
+        document.querySelector('.main-nav').classList.toggle('menu-open');
+    });</script>
+<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-</body>
 
-</html>
+</body>
+</html>    
